[gd_scene load_steps=2 format=3 uid="uid://cnvkvfkgikwwo"]

[ext_resource type="Script" path="res://scripts/EOS_instance.gd" id="1_gx6tb"]

[node name="EOSMainLogin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
script = ExtResource("1_gx6tb")

[node name="connecting_warning" type="Label" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
text = "Connecting To EOS..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="UI" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="annonLogin" type="Button" parent="UI"]
layout_mode = 2
text = "Local Login"

[node name="DevName" type="LineEdit" parent="UI"]
layout_mode = 2
placeholder_text = "Enter Dev ID Here"
alignment = 1

[node name="DevLogin" type="Button" parent="UI"]
layout_mode = 2
text = "Dev ID Login"

[connection signal="button_down" from="UI/annonLogin" to="." method="_on_annon_login_button_down"]
[connection signal="button_down" from="UI/DevLogin" to="." method="_on_dev_login_button_down"]
